--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">GoogleMaps2020</string>
-    <string name="google_maps_key">YOUR-API-KEY</string>
+    <string name="google_maps_key">GOOGLE-MAPS-API-KEY</string>
 </resources>
